--- a/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ChristmasJam21Team8/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,12 +127,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/Main_Scene
-MRUItem1=/Game/Maps/MainMenuLevel
-MRUItem2=/Game/Maps/Silouane_Quentin_Scene
-MRUItem3=/Game/Maps/AntoineScene
-MRUItem4=/Game/Maps/RomainScene
-MRUItem5=/Game/Maps/FirstPersonExampleMap
+MRUItem0=/Game/Maps/FirstPersonExampleMap
+MRUItem1=/Game/Maps/Main_Scene
+MRUItem2=/Game/Maps/MainMenuLevel
+MRUItem3=/Game/Maps/Silouane_Quentin_Scene
+MRUItem4=/Game/Maps/AntoineScene
+MRUItem5=/Game/Maps/RomainScene
 MRUItem6=/Game/Maps/GameScene
 MRUItem7=/Game/Maps/Game
 MRUItem8=/Game/Maps/GameOverScene
@@ -260,20 +260,20 @@ FirstPersonCharacter_C=StaticMeshActor.Collision.Collision,FirstPersonCharacter_
 CapsuleComponent=
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
 Shelf_Blueprint_C=
 Shelf_Blueprint_C=
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
 None=======
 etagere_Blueprint_C=
 Void_Item_Blueprint_C=Void_Item_Blueprint_C.Physics.ConstraintsGroup,Void_Item_Blueprint_C.Rendering.RayTracing,Void_Item_Blueprint_C.Rendering.LOD,
 Non_Pickable_Item_Blueprint_C=Non_Pickable_Item_Blueprint_C.Physics.ConstraintsGroup,Non_Pickable_Item_Blueprint_C.Rendering.RayTracing,Non_Pickable_Item_Blueprint_C.Rendering.LOD,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,
-SceneComponent=
-PickableObject_2_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,
+PickableObject_2_C=PropertyWrapper.DefaultValueCategory.None,FirstPersonCharacter_C.Physics.ConstraintsGroup,FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,FirstPersonCharacter_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.None,
 EnemyAI_C=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 BTT_ChangeMoveSpeed_C=
 Character=PropertyWrapper.DefaultValueCategory.None,
@@ -292,7 +292,7 @@ PlayerStart=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.Constrai
 Brush=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 NavModifierVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 NavMeshBoundsVolume=PropertyWrapper.DefaultValueCategory.None,EnemyAI_C.Physics.ConstraintsGroup,EnemyAI_C.Collision.Collision,EnemyAI_C.Rendering.TextureStreaming,EnemyAI_C.Rendering.LOD,
 
 [ContentBrowser]
@@ -378,33 +378,38 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Scene
+LastLevel=/Game/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Shelf/PickableObject_2.PickableObject_2
+OpenAssetsAtExit=/Game/Shelf/Void_Item_Blueprint.Void_Item_Blueprint
+OpenAssetsAtExit=/Game/Shelf/Non_Pickable_Item_Blueprint.Non_Pickable_Item_Blueprint
+OpenAssetsAtExit=/Game/Shelf/etagere_Blueprint.etagere_Blueprint
+OpenAssetsAtExit=/Game/Mesh/Materials/PresentBlue.PresentBlue
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Mesh/MeshtoUE4/present_3
-MRUItem1=/Game/Mesh/MeshtoUE4/present_2
-MRUItem2=/Game/Mesh/MeshtoUE4/present
-MRUItem3=/Game/Mesh/MeshtoUE4/wall
-MRUItem4=/Game/Maps/Main_Scene
-MRUItem5=/Game/Maps/MainMenuLevel
-MRUItem6=/Game/AI/EnemyAI
-MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem8=/Game/Maps/Silouane_Quentin_Scene
-MRUItem9=/Game/Maps/AntoineScene
-MRUItem10=/Game/Mesh/MeshtoUE4/floor
-MRUItem11=/Game/Mesh/Materials/Wall
-MRUItem12=/Game/Mesh/Materials/Floor
-MRUItem13=/Game/Mesh/Materials/PresentPink
-MRUItem14=/Game/Mesh/Materials/PresentBlue
-MRUItem15=/Game/Mesh/Materials/present
-MRUItem16=/Game/Mesh/Materials/Face
-MRUItem17=/Game/Mesh/Materials/Pauliam
-MRUItem18=/Game/Mesh/Materials/Daddy
-MRUItem19=/Game/Mesh/Materials/Cercamon
+MRUItem0=/Game/Mesh/Materials/PresentBlue
+MRUItem1=/Game/Shelf/etagere_Blueprint
+MRUItem2=/Game/Maps/FirstPersonExampleMap
+MRUItem3=/Game/StarterContent/Shapes/Shape_Cone
+MRUItem4=/Game/Shelf/Void_Item_Blueprint
+MRUItem5=/Game/Shelf/Non_Pickable_Item_Blueprint
+MRUItem6=/Game/Shelf/PickableObject_2
+MRUItem7=/Game/Mesh/MeshtoUE4/present_3
+MRUItem8=/Game/Mesh/MeshtoUE4/present_2
+MRUItem9=/Game/Mesh/MeshtoUE4/present
+MRUItem10=/Game/Mesh/MeshtoUE4/wall
+MRUItem11=/Game/Maps/Main_Scene
+MRUItem12=/Game/Maps/MainMenuLevel
+MRUItem13=/Game/AI/EnemyAI
+MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem15=/Game/Maps/Silouane_Quentin_Scene
+MRUItem16=/Game/Maps/AntoineScene
+MRUItem17=/Game/Mesh/MeshtoUE4/floor
+MRUItem18=/Game/Mesh/Materials/Wall
+MRUItem19=/Game/Mesh/Materials/Floor
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -1623,9 +1628,9 @@ InstalledPlugins=XRVisualization
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 None=======
 None=======
 None=======
@@ -1653,8 +1658,8 @@ Pawn="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collisio
 Shelf_Blueprint_C="\"Object.Item\" "
 StaticMeshActor=
 etagere_Blueprint_C=
-Void_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
-Non_Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+Void_Item_Blueprint_C=
+Non_Pickable_Item_Blueprint_C=
 Pickable_Item_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 EnemyAI_C="\"Object.Default.patrolPositions\" "
 EnemyAI_C="\"Object.Default.patrolPositions\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
@@ -1662,7 +1667,7 @@ SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.Body
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent=
 ShapeComponent=
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1676,8 +1681,8 @@ BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 BTT_ResetLostSight_C=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-SphereComponent="\"Object.Collision.BodyInstance\" "
-PickableObject_2_C=
+SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PickableObject_2_C="\"Object.ListOfPickableItemsMat\" "
 Clock_C=
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PreviewMaterial=
@@ -1698,6 +1703,7 @@ CanvasPanel="\"Object.Layout.Slot\" "
 Enemy_AnimBP_C=
 AnimInstance=
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Generic_Item_C="\"Object.ListOfPickableItemsMat\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1763,6 +1769,7 @@ None=======
 /Game/Mesh/MeshtoUE4/present.present=1
 /Game/Mesh/MeshtoUE4/present_2.present_2=1
 /Game/Mesh/MeshtoUE4/present_3.present_3=1
+/Game/StarterContent/Shapes/Shape_Cone.Shape_Cone=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1834,7 +1841,7 @@ RecentlyPlaced=/Game/FirstPersonBP/Blueprints/PickableObject_2.PickableObject_2;
 None=======
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [MaterialEditor]
 PrimType=1
@@ -3044,7 +3051,7 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
